✨ 지역별 캠핑장 수 가져오기 기능 추가 (#8)
* :sparkles: 캠핑장 카테고리 Enum 변경, 지역 Enum 추가

## CampingCategoryMenu
- Enum에 정의된 이름 변경

## Region
- UI의 지역이름과 DB에 정의된 지역이름이 다름으로 Enum 타입으로 정의
- 각 지역별 중앙 위도,경도를 정의

* :recycle: Address Embedded 타입의 지역을 EnumType 으로 변경

* :sparkles: 지역별 캠핑장 정보 가져오기 기능 추가

## CampingRepository
- JPQL을 통해 지역별 캠핑장 수 검색 쿼리 추가
- 캠핑장의 Category도 같이 가져와야 하기 때문에 fetch Join을 통해 N+1 문제 해결

## CampingService
- 지역별 캠핑장 수 검색 기능 추가

## CampingController
- 지역별 캠핑장 수 검색 api 추가

## CampingRegionCountsResponse
- 응답을 보내줄 Response 타입 추가

## CampingServiceTest
- 지역별 캠핑장 수 검색 단위 테스트 추가

## CampingControllerTest
- 지역별 캠핑장 수 검색 통합 테스트 추가
- SpringRestDoc을 통한 문서화